# WFiIS-MN-2019

./: .gitignore  CMakeLists.txt  README.md
Prep Zajecia 4/: main.cpp
Zajecia 1/: main.cpp
Zajecia 10/: data_func1_jednatrzecia.csv  data_func1_zloty.csv  data_func2_jednatrzecia.csv  data_func2_zloty.csv  main.cpp  plot  plot2
Zajecia 11/: data_zaj11_10.csv  data_zaj11_12.csv  data_zaj11_8.csv  main.cpp  plot.sh  plotk1_1  plotk1_2  plotk2_1  plotk2_2  plotk3_1  plotk3_2
Zajecia 12/: data_zaj12_1.csv  data_zaj12_2.csv  data_zaj12_3.csv  main.cpp
Zajecia 13/: data_13_1.csv  data_13_2.csv  data_13_3.csv  data_13_4.csv  data_13_5.csv  data_13_6_1.csv  data_13_6_2.csv  data_13_7_1.csv  data_13_7_2.csv  gestosci_13_7_3  main.cpp  plot1_1  plot1_2  plot1_3  plot2_1  plot2_2  plot2_3  plot3_1  plot3_2  plot3_3  plot4_1  plot4_2
Zajecia 2/: data_50.csv  data_50.xlsx  data_500.csv  data_500.xlsx  main.cpp
Zajecia 3/: elim.cpp  main.cpp
Zajecia 3 Wstega/: main.cpp
Zajecia 4/: alfa_0_data.csv  alfa_100_data.csv  data.csv  main.cpp  plota0  plota100  plotw
Zajecia 5/: data_lambdas.csv  data_matrix.csv  main.cpp  plotwlasne
Zajecia 6/: data_newton_log.csv  data_newton_rown.csv  data_sieczne_log.csv  data_sieczne_rown.csv  main.cpp  plotf  plotg  plotpfp  plotpgp
Zajecia 7/: data_lagrange_n1.csv  data_lagrange_n1_chebyshev.csv  data_lagrange_n2.csv  data_lagrange_n2_chebyshev.csv  data_lagrange_n3.csv  data_lagrange_n3_chebyshev.csv  data_lagrange_n4.csv  data_lagrange_n4_chebyshev.csv  main.cpp  plot.sh  plotn1  plotn1c  plotn2  plotn2c  plotn3  plotn3c  plotn4  (+1 more)
(+37 files in other folders)
